# study-tracker

./: README.md
study-tracker-cli/: README.md  main.py  pyproject.toml  requirements.txt
study-tracker-cli/commands/: __init__.py  focus.py  habit.py  stats.py  study.py
study-tracker-cli/database/: db.py
study-tracker-cli/utils/: __init__.py  config.py  formatters.py  timer.py
